--- a/.envrc.example
+++ b/.envrc.example
@@ -1,3 +1,5 @@
 export FLASK_APP=run.py
 export FLASK_DEBUG=True
 export DATABASE_URL=postgresql://<user>:<password>@localhost/<db name>
+export REDIS_HOST=localhost
+export REDIS_PORT=6001
