--- a/.envrc.example
+++ b/.envrc.example
@@ -3,3 +3,4 @@ export FLASK_DEBUG=True
 export DATABASE_URL=postgresql://<user>:<password>@localhost/<db name>
 export REDIS_HOST=localhost
 export REDIS_PORT=6001
+export API_KEY=testkey
